jumping table fixed

--- a/src/pages/DashboardPage/DashboardPage.module.scss
+++ b/src/pages/DashboardPage/DashboardPage.module.scss
@@ -82,6 +82,6 @@
     }
   }
   .table {
-    margin-top: -390px;
+    margin-bottom: auto;
   }
 }
